[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://DropZone.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 33.75, 33.75 )

[sub_resource type="CircleShape2D" id=2]
radius = 67.5

[node name="DropZone" type="Area2D"]
modulate = Color( 0.356863, 0.356863, 0.356863, 1 )
scale = Vector2( 4, 4 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="DropRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropRadius"]
z_index = -1
shape = SubResource( 2 )

[connection signal="body_shape_entered" from="DropRadius" to="." method="_on_DropRadius_body_shape_entered"]
[connection signal="body_shape_exited" from="DropRadius" to="." method="_on_DropRadius_body_shape_exited"]
